<resources>
    <string name="app_name">黄金之路</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="linearLayout_horizontal">水平方向线性布局</string>
    <string name="linearlayout_vertical">竖直线性布局</string>
    <string name="linearLayout_buttonState">按钮点击状态</string>
    <string name="linearLayout_cancel">取消</string>
    <string name="linearLayout_login">登录</string>
</resources>
